DT-910: Add additional scenarios
Signed-off-by: Niels Thykier <niels.thykier@dcsa.org>